--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -626,7 +626,7 @@ input, select, textarea {
 		background: #fff !important;}	
 .box {
 		/*background: #1f26ff;*/
-		color: #39454b;
+		color: #ffffff;
 		padding: 2em;
 		background-color: rgba(37, 62, 149, 0.7);
 	}
